--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -16,11 +16,7 @@
     <div class="wrapper">
       <header>
         <h1><a href="{{ "/" | absolute_url }}">{{ site.title | default: site.github.repository_name }}</a></h1>
-
-        {% if site.logo %}
-          <img src="{{site.logo | relative_url}}" alt="Logo" />
-        {% endif %}
-
+        <img src="https://user-images.githubusercontent.com/1476820/154357977-2237d1ad-714f-4c93-954d-4a9667fa0357.png?s=200" alt="Logo" />
         <p>{{ site.description | default: site.github.project_tagline }}</p>
 
         <ul class="downloads">
