--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -20,9 +20,9 @@
         <p>{{ site.description | default: site.github.project_tagline }}</p>
 
         <ul class="downloads">
-          <li><a href="https://github.com/workbenchapp/solana-workbench-releases/releases/download/v0.2.1/Solana.Workbench-0.2.1-arm64.dmg">Download v0.2.1 for <strong>M1 Mac</strong></a></li>
-          <li><a href="https://github.com/workbenchapp/solana-workbench-releases/releases/download/v0.2.1/Solana.Workbench-0.2.1.dmg">Download v0.2.1 for <strong>x86_64 Mac</strong></a></li>
-          <li><a href="https://github.com/workbenchapp/solana-workbench-releases/releases/download/v0.2.1/Solana.Workbench.Setup.0.2.1.exe">Download v0.2.1 for <strong>Windows</strong></a></li>
+          <li style="padding: 3px;"><a href="https://github.com/workbenchapp/solana-workbench-releases/releases/download/v0.2.1/Solana.Workbench-0.2.1-arm64.dmg">Download v0.2.1 for <strong>M1 Mac</strong></a></li>
+          <li style="padding: 3px;"><a href="https://github.com/workbenchapp/solana-workbench-releases/releases/download/v0.2.1/Solana.Workbench-0.2.1.dmg">Download v0.2.1 for <strong>x86_64 Mac</strong></a></li>
+          <li style="padding: 3px;"><a href="https://github.com/workbenchapp/solana-workbench-releases/releases/download/v0.2.1/Solana.Workbench.Setup.0.2.1.exe">Download v0.2.1 for <strong>Windows</strong></a></li>
         </ul>
       </header>
       <section>
