--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -18,11 +18,10 @@
         <h1><a href="{{ "/" | absolute_url }}">{{ site.title | default: site.github.repository_name }}</a></h1>
         <img src="https://user-images.githubusercontent.com/1476820/154357977-2237d1ad-714f-4c93-954d-4a9667fa0357.png?s=200" alt="Logo" />
         <p>{{ site.description | default: site.github.project_tagline }}</p>
-
-        <ul class="downloads">
-          <li style="padding: 3px;"><a href="https://github.com/workbenchapp/solana-workbench-releases/releases/download/v0.2.1/Solana.Workbench-0.2.1-arm64.dmg">Download v0.2.1 for <strong>M1 Mac</strong></a></li>
-          <li style="padding: 3px;"><a href="https://github.com/workbenchapp/solana-workbench-releases/releases/download/v0.2.1/Solana.Workbench-0.2.1.dmg">Download v0.2.1 for <strong>x86_64 Mac</strong></a></li>
-          <li style="padding: 3px;"><a href="https://github.com/workbenchapp/solana-workbench-releases/releases/download/v0.2.1/Solana.Workbench.Setup.0.2.1.exe">Download v0.2.1 for <strong>Windows</strong></a></li>
+        <ul>
+          <li><a href="https://github.com/workbenchapp/solana-workbench-releases/releases/download/v0.2.1/Solana.Workbench-0.2.1-arm64.dmg">Download v0.2.1 for <strong>M1 Mac</strong></a></li>
+          <li><a href="https://github.com/workbenchapp/solana-workbench-releases/releases/download/v0.2.1/Solana.Workbench-0.2.1.dmg">Download v0.2.1 for <strong>x86_64 Mac</strong></a></li>
+          <li><a href="https://github.com/workbenchapp/solana-workbench-releases/releases/download/v0.2.1/Solana.Workbench.Setup.0.2.1.exe">Download v0.2.1 for <strong>Windows</strong></a></li>
         </ul>
       </header>
       <section>
